--- a/Lab5/style.css
+++ b/Lab5/style.css
@@ -110,8 +110,40 @@ body {
 }
 
 .search-form {
-    margin: 50px 0;
     display: flex;
+    flex-direction: column;
+}
+
+.search-form-input {
+    margin: 50px 0 0 0;
+    display: flex;
+}
+
+.search-form-response {
+    margin: 0 0 50px 0;
+    display: flex;
+    z-index: 2;
+}
+
+.list-input {
+    flex-direction: column;
+    width: 100%;
+    height: 20px;
+    padding: 0;
+    margin: 0;
+}
+
+.list-input li {
+    list-style-type: none;
+    background-color: white;
+    color: black;
+    padding: 10px 10px 10px 15px;
+    border: 1px solid #d7d7d7;
+    border-left: 5px solid grey;
+}
+
+.list-input li:hover {
+    background-color: #d7d7d7;
 }
 
 #search-field {
@@ -144,4 +176,9 @@ body {
 
 #search-screan {
     font-size: 100%;
+}
+
+.list-input {
+    width: 100%;
+    flex-direction: column;
 }
